Squashed commit of the following:
commit 34ee940b500137395aa2c946a2e0938eb9ed1e24
Author: yinjimmy <jimmy.yin5@gmail.com>
Date:   Sat Nov 14 00:59:52 2015 +0800

    Make window resizable & cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 proj.ios_mac/imguix.xcodeproj/project.xcworkspace
 proj.ios_mac/imguix.xcodeproj/xcuserdata
+proj.mac/imguix.xcodeproj/project.xcworkspace
+proj.mac/imguix.xcodeproj/xcuserdata
