--- a/proj.win32/imguix.vcxproj.filters
+++ b/proj.win32/imguix.vcxproj.filters
@@ -33,11 +33,11 @@
     <ClCompile Include="..\Classes\imgui\imgui_draw.cpp">
       <Filter>src\imgui</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\imgui\imgui_impl_glfw.cpp">
-      <Filter>src\imgui</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\IMGUIGLViewImpl.cpp">
       <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\imgui\imgui_impl_glfw_win32.cpp">
+      <Filter>src\imgui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
