--- a/proj.win32/imguix.vcxproj
+++ b/proj.win32/imguix.vcxproj
@@ -149,6 +149,7 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.8.1\prebuilt\win32\*.*" "$(OutDir)"
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\IMGUIGLViewImpl.cpp" />
+    <ClCompile Include="..\Classes\ImGuiLayer.cpp" />
     <ClCompile Include="..\Classes\imgui\imgui.cpp" />
     <ClCompile Include="..\Classes\imgui\imgui_demo.cpp" />
     <ClCompile Include="..\Classes\imgui\imgui_draw.cpp" />
@@ -159,6 +160,7 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.8.1\prebuilt\win32\*.*" "$(OutDir)"
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\IMGUIGLViewImpl.h" />
+    <ClInclude Include="..\Classes\ImGuiLayer.h" />
     <ClInclude Include="..\Classes\imgui\imconfig.h" />
     <ClInclude Include="..\Classes\imgui\imgui.h" />
     <ClInclude Include="..\Classes\imgui\imgui_impl_glfw.h" />
