--- a/proj.win32/imguix.vcxproj.filters
+++ b/proj.win32/imguix.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="..\Classes\ImGuiLayer.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\CCIMGUI.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -78,6 +81,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\ImGuiLayer.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\CCIMGUI.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
