--- a/proj.win32/imguix.vcxproj
+++ b/proj.win32/imguix.vcxproj
@@ -147,11 +147,11 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.8.1\prebuilt\win32\*.*" "$(OutDir)"
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
-    <ClCompile Include="..\Classes\CCIMGUI.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
-    <ClCompile Include="..\Classes\IMGUIGLViewImpl.cpp" />
-    <ClCompile Include="..\Classes\ImGuiLayer.cpp" />
+    <ClCompile Include="..\Classes\imgui\CCIMGUI.cpp" />
     <ClCompile Include="..\Classes\imgui\imgui.cpp" />
+    <ClCompile Include="..\Classes\imgui\IMGUIGLViewImpl.cpp" />
+    <ClCompile Include="..\Classes\imgui\ImGuiLayer.cpp" />
     <ClCompile Include="..\Classes\imgui\imgui_demo.cpp" />
     <ClCompile Include="..\Classes\imgui\imgui_draw.cpp" />
     <ClCompile Include="..\Classes\imgui\imgui_impl_glfw_win32.cpp" />
@@ -159,12 +159,12 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.8.1\prebuilt\win32\*.*" "$(OutDir)"
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
-    <ClInclude Include="..\Classes\CCIMGUI.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
-    <ClInclude Include="..\Classes\IMGUIGLViewImpl.h" />
-    <ClInclude Include="..\Classes\ImGuiLayer.h" />
+    <ClInclude Include="..\Classes\imgui\CCIMGUI.h" />
     <ClInclude Include="..\Classes\imgui\imconfig.h" />
     <ClInclude Include="..\Classes\imgui\imgui.h" />
+    <ClInclude Include="..\Classes\imgui\IMGUIGLViewImpl.h" />
+    <ClInclude Include="..\Classes\imgui\ImGuiLayer.h" />
     <ClInclude Include="..\Classes\imgui\imgui_impl_glfw.h" />
     <ClInclude Include="..\Classes\imgui\imgui_internal.h" />
     <ClInclude Include="..\Classes\imgui\stb_rect_pack.h" />
